-------------------------------------------------------------------------------
06 Jun 97:
  o Fixed frename compat function to overwrite existing files.
-------------------------------------------------------------------------------
13 Jun 97:
  o Converted more commands to object system.
===============================================================================
16 Jun 97: Released TclX 8.0.0 Beta 1
17 Jun 97: Re-releases TclX 8.0.0 Beta 1 due to mangled patch.
===============================================================================
04 Jul 97:
  o Converted all commands that can be converted to work with binary data;
    documented those that don't support binary data.
  o Modified signals to be better behaved with multiple interpreters.
    Thanks to Viktor Dukhovni <viktor@esm.com> for the patch.
  o Fix trap signal handler overwriting interp result.
  o Modified the system command to take multiple arguments and concat them
    into a single command string.
  o Deprecated the copyfile command in favor of the fcopy command. 
    Compatability with copyfile is still supported for old scripts via a
    procedure in the TclX library.
  o All commands now use the Tcl_Obj API.
===============================================================================
08 Jul 97: Released TclX 8.0.0 Beta 2
===============================================================================
08 Jul 97:
  o Fixed core dump when signal occurs during event idle.
  o The safe Tk package init function is now registered.
-------------------------------------------------------------------------------
09 Jul 97:
  o Added try_eval command.
-------------------------------------------------------------------------------
10 Jul 97:
  o Modified the profile command to correctly support namespaces.
  o Modified TclX auto load libraries to work with namespaces.
-------------------------------------------------------------------------------