@@ -12,15 +12,14 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: cmdtrace.test,v 8.2 1997/06/12 21:08:36 markd Exp $
+# $Id: cmdtrace.test,v 8.3 1997/07/04 01:45:44 markd Exp $
 #------------------------------------------------------------------------------
 #
 
 if [cequal [info procs Test] {}] {source testlib.tcl}
 
 set doNoeval 0
-set docallbackerr 0
-if {(!$doNoeval) ||(!$docallbackerr)} {
+if {$doNoeval} {
     # FIX
     echo "**** Some command trace test disabled due to Tcl 8.0b2 bugs"
 }
@@ -219,15 +218,20 @@ Test cmdtrace-3.1 {command trace argument error checking} {
 ERRORINFO \
 ERRORCODE]
 
-if $docallbackerr {
 Test cmdtrace-3.2 {command trace argument error checking} {
-    exec $TCL_PROGRAM -qc {cmdtrace on command {foo $NOTDEFINED};info globals}
-} 1 {cmdtrace callback command error: errorCode = NONE
-can't read "NOTDEFINED": no such variable
+    exec $TCL_PROGRAM -qc {
+        puts [list [catch {
+            cmdtrace on command {foo $NOTDEFINED}
+            info globals
+        } msg] $msg $errorInfo]
+    }
+} 0 {1 {can't read "NOTDEFINED": no such variable} {can't read "NOTDEFINED": no such variable
     while executing
-"foo $NOTDEFINED {{info globals}} {{info globals}} 1 0"
-    ("cmdtrace" callback command)} {tempNotPc}
-}
+"foo $NOTDEFINED {{info globals}} {{info globals}} 2 0"
+    ("cmdtrace" callback command)
+    invoked from within
+"info globals"}}
+
 TestRemove CMDTRACE.OUT
 
 
